# runas

./: .bumpversion.cfg  .envrc  CMakeLists.txt  README.md
include/: conf.h  path.h  perm.h  utils.h  version.h
src/: conf.cpp  path.cpp  perm.cpp  runas.cpp  utils.cpp
